# LyricsAdapter

./: .gitignore  App.tsx  AppWorkspace.tsx  CONTRIBUTOR.md  DEBUG_METADATA.md  LICENSE  LyricsAdapt.py  LyricsAdapter.py  METADATA_FIX_SUMMARY.md  README.en.md  README.md  app-icon-LICENSE  app.py  audio_processing.py  audio_resource.py  benchmark.md  bytecode.txt  cookie.txt  decrypt.py  entitlements.mac.plist  filename_remove.py  get_audio_resource.py  index.css  index.html  index.tsx  metadata.json  metadata.txt  metadata_processing.py  package-lock.json  package.json  pyproject.toml  requirements.txt  test-electron-metadata.mjs  test-ffmpeg-metadata.mjs  test-metadata-write.mjs  test.py  tsconfig.json  types.ts  vite.config.ts
.dims/: history-marker  variance-table.md
backend/: README.md  app.py  audio_resource.py  get_audio_resource.py  metadata_processing.py  pyproject.toml
backend/templates/: index.html
backend/utils/: get_pan_token.py  qq_music_metadata.py  qq_music_resource.py  qq_music_resource_2.py
binaries/: README.md
components/: BrowseView.tsx  Controls.tsx  CookieDialog.tsx  ErrorBoundary.tsx  FocusMode.tsx  GlobalSearch.tsx  GsapModal.tsx  LibraryToolbar.tsx  LibraryTrackRow.tsx  LibraryView.tsx  LyricsOverlay.tsx  MainPlayer.tsx  MetadataEditorPopup.tsx  MetadataView.tsx  PlaylistsView.tsx  QueuePanel.tsx  RetroSwitch.tsx  SearchBox.tsx  SettingsDialog.tsx  SettingsView.tsx  ShortcutsSettings.tsx  Sidebar.tsx  ThemeView.tsx  TitleBar.tsx  TrackCover.tsx
constants/: config.ts
docs/: refactor-plan-2026-04-27.md
electron/: cleanup-handler.ts  (+6 more)
(+139 files in other folders)
