[project]
name = "lyricsadapter"
version = "2.0.0"
description = "Music search, download and metadata processing tool with oxidant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
    "oxidant>=0.1.0",
]
